--- a/docs/faststore/docs/customization/api-extensions/extending-queries-using-fragments.mdx
+++ b/docs/faststore/docs/customization/api-extensions/extending-queries-using-fragments.mdx
@@ -72,8 +72,8 @@ These queries enable customization by allowing the addition or modification of f
     In the hook `useProductGalleryQuery()` from the `ProductListingPage` (`PLP`) and `Search` Pages.
   </td>
   <td>
-    Products totalCount from [StorePageInfo](https://v1.faststore.dev/reference/api/objects#storepageinfo), and facets ([StoreFacet](https://v1.faststore.dev/reference/api/objects#storefacet)) from
-    [StoreSearchResult](https://v1.faststore.dev/reference/api/objects#storesearchresult).
+    Products totalCount from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo), and facets ([StoreFacet](https://v1.faststore.dev/reference/api/objects#storefacet)) from
+    [StoreSearchResult](https://developers.vtex.com/docs/guides/faststore/schema-objects#storesearchresult).
   </td>
   <td>
     Frontend data from the `useSearch()` and `useLocalizedVariables()`
@@ -107,7 +107,7 @@ These queries enable customization by allowing the addition or modification of f
   <td>PLP</td>
   <td>In the function `getStaticProps()` from `PLP`.</td>
   <td>
-    seo, breadcrumbList and meta data from the collection ([StoreCollection](https://v1.faststore.dev/reference/api/objects#storecollection)).
+    seo, breadcrumbList and meta data from the collection ([StoreCollection](https://developers.vtex.com/docs/guides/faststore/schema-objects#storecollection)).
   </td>
   <td>Collection `slug` that comes from URL.</td>
 </table>
@@ -130,7 +130,7 @@ These queries enable customization by allowing the addition or modification of f
   <td>product</td>
   <td>PDP</td>
   <td>In the function `getStaticProps()` from `PDP`.</td>
-  <td>General product data from [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct).</td>
+  <td>General product data from [StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct).</td>
   <td>The `locator` with `slug` key/value.</td>
 </table>
 
@@ -154,7 +154,7 @@ These queries enable customization by allowing the addition or modification of f
   <td>PDP</td>
   <td>In the hook `useProductQuery()` from `PDP`.</td>
   <td>
-    General product data from [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct) to update product data inside
+    General product data from [StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct) to update product data inside
     `PDP` (product coming from `ServerProductQuery` as fallback).
   </td>
   <td>
@@ -194,7 +194,7 @@ These queries enable customization by allowing the addition or modification of f
     <br />
   </td>
   <td>
-    General products data ([StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct)) with the `totalCount` from [StorePageInfo](https://v1.faststore.dev/reference/api/objects#storepageinfo).
+    General products data ([StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct)) with the `totalCount` from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo).
   </td>
   <td>
     Frontend data from the `useLocalizedVariables()` and `useSession()` hooks.
