--- a/docs/faststore/docs/api-extensions/extending-queries-using-fragments.mdx
+++ b/docs/faststore/docs/api-extensions/extending-queries-using-fragments.mdx
@@ -1,21 +1,23 @@
 ---
 title: "Extending queries using fragments"
+slug: extending-queries-using-fragments
 ---
 
-After [defining the new fields exposed by the FastStore API Extension](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-api-schema), the next step is to specify where these fields will be used within GraphQL fragments.
+After [defining the new fields exposed by the FastStore API Extension](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-api-schema), the next step is to specify where these fields will be utilized within GraphQL fragments.
 
-[Fragments](https://graphql.org/learn/queries/#fragments) in GraphQL are reusable units that enhance query functionality. FastStore associates these fragments with the existing queries on its pages to incorporate the newly exposed fields.
+[Fragments](https://graphql.org/learn/queries/#fragments) in GraphQL are reusable units that enhance query functionality. FastStore associates these fragments with the existing queries used on its pages to incorporate the newly exposed fields.
 
-> ℹ️ To access the list of queries and their corresponding fragments, check the [extendable queries](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-queries-using-fragments) section.
+> ℹ️ To access the list of queries and their corresponding fragments, refer to the [extendable queries](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-queries-using-fragments#extendable-queries) section.
 
-Follow the steps below to add custom fields to an [existing query](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-queries-using-fragments#extendable-queries). We will use the `ServerProduct` query as an example to illustrate how to extend it.
+follow the steps below to add custom fields to an [existing query](https://developers.vtex.com/docs/guides/faststore/api-extensions-overview#extendable-queries). We will use the `ServerProduct` query as an example to illustrate how to extend.
 
 ---
+
 ## Before you begin
 
 ### Avoid over-fetching data on pages
- 
-Even though you can add information to the FastStore API schema, you must be careful not to over-fetch data on your pages. See the [best practices for fetching data on your storefront](https://developers.vtex.com/docs/guides/faststore/api-extensions-overview#best-practices-for-fetching-data).
+
+Even though you can add information to the FastStore API schema, you must be careful not to over-fetch data on your pages. See the [best practices for fetching data on your storefront](https://v1.faststore.dev/how-to-guides/faststore-api/fetching-api-data#best-practices-for-fetching-data).
 
 ---
 
@@ -23,25 +25,25 @@ Even though you can add information to the FastStore API schema, you must be car
 
 ### Step 1: Create a new file
 
-1. In the `src` folder of your store code, create a `fragments` folder.
+1. In the `src` folder of your store code, create the `fragments` folder.
 
   ```bash
   mkdir fragments
-```
+  ```
 
-2. In the `fragments` folder, create a file named `ServerProduct.ts`. 
+2. In the `fragments` folder, create the file named `ServerProduct.ts`.
 
   ```bash
   touch ServerProduct.ts
   ```
-
-> ⚠️ The file name should match the name of the query you want to extend.
+  
+  > ⚠️ The name of the file should match the name of the query you want to extend without the Query suffix. In our example we're extending the `ServerProductQuery`, so the fragment file must be `ServerProduct.ts`.
 
 ### Step 2: Define the GraphQL fragment
 
-In the `ServerProduct.ts` file, define the GraphQL fragment corresponding to the new fields you want to retrieve. In this example, the `customData` property represents the new field. Use the following syntax as a guideline:
+In the `ServerProduct.ts` file, define the GraphQL fragment corresponding to the new fields you want. In this example, the new field is represented by `customData` property to retrieve. Use the following syntax as a guideline:
 
-```ts src/fragments/ServerProduct.ts
+ ```ts src/fragments/ServerProduct.ts
 
 import { gql } from '@faststore/core/api'
 
@@ -52,33 +54,49 @@ export const fragment = gql(`
     }
   }
 `)
-
 ```
-Now, you can consume `customData` by following the [Consuming FastStore API extension with custom components](https://developers.vtex.com/docs/guides/faststore/api-extensions/consuming-api-extensions) guide.
 
-## Extendable queries
+Now, you can consume `customData` by following the [Consuming FastStore API extension with custom components](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions) guide.
+
+## Extendable Queries
 
 Extendable queries in FastStore's GraphQL API are predefined queries that form the basis for fetching data from the API.
+
 These queries enable customization by allowing the addition or modification of fields to align data retrieval with your store-specific requirements.
 
-
-### `ClientProductGalleryQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientProductGallery` | `Client` | `search` | PLP | In the hook `useProductGalleryQuery()` from the `ProductListingPage` (`PLP`) and `Search` Pages. | Products totalCount from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo), and facets ([StoreFacet](https://v1.faststore.dev/reference/api/objects#storefacet)) from [StoreSearchResult](https://developers.vtex.com/docs/guides/faststore/schema-objects#storesearchresult). | Frontend data from the `useSearch()` and `useLocalizedVariables()` hooks, the latter uses `useSession()`. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ClientProductGalleryQuery`</summary>
+
+<table>
+  <td>ClientProductGallery</td>
+  <td>Client</td>
+  <td>search</td>
+  <td>PLP</td>
+  <td>
+    In the hook `useProductGalleryQuery()` from the `ProductListingPage` (`PLP`) and `Search` Pages.
+  </td>
+  <td>
+    Products totalCount from [StorePageInfo](https://v1.faststore.dev/reference/api/objects#storepageinfo), and facets ([StoreFacet](https://v1.faststore.dev/reference/api/objects#storefacet)) from
+    [StoreSearchResult](https://v1.faststore.dev/reference/api/objects#storesearchresult).
+  </td>
+  <td>
+    Frontend data from the `useSearch()` and `useLocalizedVariables()`
+    hooks, the latter uses `useSession()`.
+  </td>
+</table>
+
+### How to consume it
 
 Use the `usePage()` hook when you have a single section that is used in more than one type of page.
+
 ```ts
 import { usePage } from "@faststore/core"
 
 const context = usePage()
 ```
+
 This hook returns one of the following types as context: `PDPContext`, `PLPContext`, or `SearchPageContext`, and you can decide how to handle it depending on the page that will use this hook by passing the types as generics.
-    
+
 ```ts
 import { usePage } from "@faststore/core"
 
@@ -87,16 +105,25 @@ const context = usePage<PLPContext | SearchPageContext>()
 
 </details>
 
-### `ServerCollectionPageQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ServerCollectionPage` | `Server` | `collection` | PLP | In the function `getStaticProps()` from `PLP`. | `seo`, `breadcrumbList` and `metaData` from the collection ([StoreCollection](https://developers.vtex.com/docs/guides/faststore/schema-objects#storecollection)). | Collection `slug` that comes from URL. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ServerCollectionPageQuery`</summary>
+
+<table>
+  <td>ServerCollectionPage</td>
+  <td>Server</td>
+  <td>collection</td>
+  <td>PLP</td>
+  <td>In the function `getStaticProps()` from `PLP`.</td>
+  <td>
+    seo, breadcrumbList and meta data from the collection ([StoreCollection](https://v1.faststore.dev/reference/api/objects#storecollection)).
+  </td>
+  <td>Collection `slug` that comes from URL.</td>
+</table>
+
+### How to consume it
 
 Use the `usePLP()` hook when integrating your section with a Product Listing Page (PLP).
+
 ```ts
 import { usePLP } from "@faststore/core"
 
@@ -105,14 +132,20 @@ const context = usePLP()
 
 </details>
 
-### `ServerProductQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ServerProduct` | `Server` | `product` | PDP | In the function `getStaticProps()` from `PDP`. | General product data from [StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct). | The `locator` with `slug` key/value. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ServerProductQuery`</summary>
+
+<table>
+  <td>ServerProduct</td>
+  <td>Server</td>
+  <td>product</td>
+  <td>PDP</td>
+  <td>In the function `getStaticProps()` from `PDP`.</td>
+  <td>General product data from [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct).</td>
+  <td>The `locator` with `slug` key/value.</td>
+</table>
+
+### How to consume it
 
 `usePDP()`: Use this hook when integrating your section with a Product Detail Page (PDP).
 
@@ -124,45 +157,78 @@ const context = usePDP()
 
 </details>
 
-### `ClientProductQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientProduct` | `Client` | `product` | PDP | In the hook `useProductQuery()` from `PDP`. | General product data from [StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct) to update product data inside `PDP` (product coming from `ServerProductQuery` as fallback). | Frontend data from the `useSession()` hook in the locator array with `id`, `channel`, `locale` as key/values. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ClientProductQuery`</summary>
+
+<table>
+  <td>ClientProduct</td>
+  <td>Client</td>
+  <td>product</td>
+  <td>PDP</td>
+  <td>In the hook `useProductQuery()` from `PDP`.</td>
+  <td>
+    General product data from [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct) to update product data inside
+    `PDP` (product coming from `ServerProductQuery` as fallback).
+  </td>
+  <td>
+    Frontend data from the `useSession()` hook in the locator array with
+    `id`, `channel`, `locale` as key/values.
+  </td>
+</table>
+
+### How to consume it
 
 `usePDP()`: Use this hook when integrating your section with a Product Detail Page (PDP).
 
-```ts
-import { usePDP } from "@faststore/core"
+  ```ts
+  import { usePDP } from "@faststore/core"
 
-const context = usePDP()
+  const context = usePDP()
 ```
 
 </details>
 
-> ⚠️ When using both [`ServerProductQuery`](#serverproductquery) and ClientProductQuery on the PDP, remember that `ServerProductQuery` fetches the initial product data from the server, while `ClientProductQuery` updates that data based on user actions. Make sure to manage how these queries interact to ensure data accuracy. When developing API extensions, prioritize keeping the data consistent and using both queries appropriately to provide users with the most up-to-date information.
-
-### `ClientManyProductsQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientManyProducts` | `Client` | `search` | `PLP`, `Search Page`, and pages that use `ProductShelf`, and `ProductTiles` components. | <ol><li>In the hook `usePageProductsQuery()` from `PLP` and `Search Page`.</li><br><li>In the hook `useProductsPrefetch()` to prefetch the previous (prev) and next (next) page from the current `PLP` or `Search Page`.</li><br><li>In the hook `useProductsQuery()`, in `ProductShelf`, `ProductTiles` components, that can be used on multiple pages.</li></ol> | General products data ([StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct)) with the `totalCount` from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo). | Frontend data from the `useLocalizedVariables()` and `useSession()` hooks. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ClientManyProductsQuery`</summary>
+
+<table>
+  <td>ClientManyProducts</td>
+  <td>Client</td>
+  <td>search</td>
+  <td>
+    `PLP`, `Search Page`, and pages that use `ProductShelf`, and `ProductTiles` components.
+  </td>
+  <td>
+    - In the hook `usePageProductsQuery()` from `PLP` and `Search Page`.
+
+    - In the hook `useProductsPrefetch()` to prefetch the previous (prev)
+    and next (next) page from the current `PLP` or `Search Page`.
+    
+    - In the hook `useProductsQuery()`, in `ProductShelf`, `ProductTiles`
+    components, that can be used on multiple pages.
+
+  </td>
+  <td>
+    General products data ([StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct)) with the `totalCount` from [StorePageInfo](https://v1.faststore.dev/reference/api/objects#storepageinfo).
+  </td>
+  <td>
+    Frontend data from the `useLocalizedVariables()` and `useSession()` hooks.
+  </td>
+</table>
+
+### How to consume it
 
 Use the `usePage()` hook when you have a single section that is used in more than one type of page.
+
 ```ts
 import { usePage } from "@faststore/core"
 
 const context = usePage()
 ```
+
 This hook returns one of the following types as context: `PDPContext`, `PLPContext`, or `SearchPageContext`, and you can decide how to handle it depending on the page that will use this hook by passing the types as generics.
-    
-```ts
+
+  ```ts
 import { usePage } from "@faststore/core"
 
 const context = usePage<PLPContext | SearchPageContext>()
@@ -170,41 +236,60 @@ const context = usePage<PLPContext | SearchPageContext>()
 
 </details>
 
-### `ClientShippingSimulationQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientShippingSimulation` | `Client` | `shipping` | PDP | In the `ShippingSimulation` component. | General shipping simulation data with the `address` and `logisticsInfo`. | Frontend `country`, and `postalCode` from `useSession()` hook, and the `items` Array of `IShippingItem` (`id`, `quantity`, and `seller`). |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ClientShippingSimulationQuery`</summary>
 
-You can use the experimental `useShippingSimulation_unstable()` hook, or the `getShippingSimulation_unstable()` function to retrieve shipping data in Overridable (custom) components.
+<table>
+  <td>ClientShippingSimulation</td>
+  <td>Client</td>
+  <td>shipping</td>
+  <td>PDP</td>
+  <td>In the `ShippingSimulation` component.</td>
+  <td>
+    General shipping simulation data with the `address` and `logisticsInfo`.
+  </td>
+  <td>
+    Frontend `country`, and `postalCode` from `useSession()` hook, and the `items` Array of `IShippingItem` (`id`, `quantity`, and `seller`).
+  </td>
+</table>
 
+### How to consume it
+
+    You can use the experimental `useShippingSimulation_unstable()` hook, or the `getShippingSimulation_unstable()` function to retrieve shipping data in Overridable (custom) components.
 </details>
 
-### `ClientSearchSuggestionsQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientSearchSuggestions` | `Client` | `search` | `SearchInput` component from `GlobalSection`. | In the `SearchInput` component. | General search data with the `suggestions` and `products`. | Frontend data from `useSession()` hook, and the `term` searched. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ClientSearchSuggestionsQuery`</summary>
+
+<table>
+  <td>ClientSearchSuggestions</td>
+  <td>Client</td>
+  <td>search</td>
+  <td>`SearchInput` component from `GlobalSection`.</td>
+  <td>In the `SearchInput` component.</td>
+  <td>General search data with the `suggestions` and `products`.</td>
+  <td>Frontend data from `useSession()` hook, and the `term` searched.</td>
+</table>
+
+### How to consume it
 
 You can use the experimental `useSuggestions_unstable()` hook to retrieve the search suggestions data in Overridable (custom) components.
-
 </details>
 
-### `ClientTopSearchSuggestionsQuery`
-
-| **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
-| ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientTopSearchSuggestions` | `Client` | `search` | `SearchInput` component from `GlobalSection`. | In the `SearchInput` component. | The top searched suggestions. | Frontend data from `useSession()` hook. |
-
 <details>
-<summary>Consuming the query</summary>
+<summary>Query: `ClientTopSearchSuggestionsQuery`</summary>
+
+<table>
+  <td>ClientTopSearchSuggestions</td>
+  <td>Client</td>
+  <td>search</td>
+  <td>`SearchInput` component from `GlobalSection`.</td>
+  <td>In the `SearchInput` component.</td>
+  <td>The top searched suggestions.</td>
+  <td>Frontend data from `useSession()` hook.</td>
+</table>
+
+### How to consume it
 
 You can use the experimental `useTopSearch_unstable()` hook to retrieve the top search suggestions data in Overridable (custom) components.
-
 </details>
