--- a/docs/faststore/docs/customization/api-extensions/extending-queries-using-fragments.mdx
+++ b/docs/faststore/docs/customization/api-extensions/extending-queries-using-fragments.mdx
@@ -66,7 +66,7 @@ These queries enable customization by allowing the addition or modification of f
 
 | **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
 | ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientProductGallery` | `Client` | `search` | PLP | In the hook `useProductGalleryQuery()` from the `ProductListingPage` (`PLP`) and `Search` Pages. | Products totalCount from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo), and facets ([StoreFacet](https://v1.faststore.dev/reference/api/objects#storefacet)) from [StoreSearchResult](https://developers.vtex.com/docs/guides/faststore/schema-objects#storesearchresult). | Frontend data from the `useSearch()` and `useLocalizedVariables()` hooks, the latter uses `useSession()`. |
+| `ClientProductGallery` | `Client` | `search` | PLP | In the hook `useProductGalleryQuery()` from the `ProductListingPage` (`PLP`) and `Search` Pages. | Products totalCount from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo), and facets ([StoreFacet](https://developers.vtex.com/docs/guides/faststore/schema-objects#storefacetboolean)) from [StoreSearchResult](https://developers.vtex.com/docs/guides/faststore/schema-objects#storesearchresult). | Frontend data from the `useSearch()` and `useLocalizedVariables()` hooks, the latter uses `useSession()`. |
 
 <details>
 <summary>Consuming the query</summary>
