--- a/docs/faststore/docs/api-extensions/extending-queries-using-fragments.mdx
+++ b/docs/faststore/docs/api-extensions/extending-queries-using-fragments.mdx
@@ -149,7 +149,7 @@ const context = usePDP()
 
 | **Fragment** | **Side** | **Query operation** | **Page** | **Usage** | **Return** | Parameters |
 | ------------ | -------- | ------------------- | -------- | --------- | ---------- | ---------- |
-| `ClientManyProducts` | `Client` | `search` | `PLP`, `Search Page`, and pages that use `ProductShelf`, and `ProductTiles` components. | <ol><li>In the hook `usePageProductsQuery()` from `PLP` and `Search Page`.</li><br><li>In the hook `useProductsPrefetch()` to prefetch the previous (prev) and next (next) page from the current `PLP` or `Search Page`.</li><br><li>In the hook `useProductsQuery()`, in `ProductShelf`, `ProductTiles` components, that can be used on multiple pages.</li></ol> | General products data ([StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct)) with the `totalCount` from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo). | Frontend data from the `useLocalizedVariables()` and `useSession()` hooks. |
+| `ClientManyProducts` | `Client` | `search` | `PLP`, `Search Page`, and pages that use `ProductShelf`, and `ProductTiles` components. | <ol><li>In the hook `usePageProductsQuery()` from `PLP` and `Search Page`.</li><li>In the hook `useProductsPrefetch()` to prefetch the previous (prev) and next (next) page from the current `PLP` or `Search Page`.</li><li>In the hook `useProductsQuery()`, in `ProductShelf`, `ProductTiles` components, that can be used on multiple pages.</li></ol> | General products data ([StoreProduct](https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct)) with the `totalCount` from [StorePageInfo](https://developers.vtex.com/docs/guides/faststore/schema-objects#storepageinfo). | Frontend data from the `useLocalizedVariables()` and `useSession()` hooks. |
 
 <details>
 <summary>Consuming the query</summary>
