Review Banner Text

--- a/docs/faststore/components/organisms/banner-text.mdx
+++ b/docs/faststore/components/organisms/banner-text.mdx
@@ -1,6 +1,6 @@
 ---
-title: Banner Text
-excerpt: Banner Text is used for advertising brands, products, and/or collections. They comprise an image, some text content, and a call-to-action button.
+title: BannerText
+excerpt: Displays brands, products, and/or collections. They comprise an image, some text content, and a call-to-action button.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Hero___c73fdfe80ce87c2ccc4701c07e9d5398.png
 components:
@@ -8,7 +8,7 @@ components:
   - BannerTextContent.tsx
 ---
 
-Banner Text is used for advertising brands, products, and/or collections. They comprise an image, some text content, and a call-to-action button.The final `BannerText` component is a compound of the following:
+The `BannerText` is used for advertising brands, products, and/or collections. They comprise an image, some text content, and a call-to-action button.The final `BannerText` component is a compound of the following:
 
 - `BannerText`: wraps the BannerText component.
 - `BannerTextContent`: the content of the banner, including a title, caption, and Link.
@@ -71,11 +71,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 All banner text related components support all attributes also supported by the `<div>` tag.
 Besides those attributes, the following props are also supported:
 
-### Banner Text
+### BannerText
 
 <ComponentPropsSection component="BannerText" />
 
-### Banner Text Content
+### BannerTextContent
 
 <ComponentPropsSection component="BannerTextContent" />
 
