--- a/docs/faststore/components/organisms/cart-sidebar.mdx
+++ b/docs/faststore/components/organisms/cart-sidebar.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Cart Sidebar"
-excerpt: The `CartSidebar` displays the summary of items added to the cart along with detailed information, and checkout option.
+title: "CartSidebar"
+excerpt: Displays the summary of items added to the cart along with detailed information, and checkout option.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/CartSidebar___5863b0eb4a4a8ce9a98da5c760461e61.png
 components:
@@ -160,7 +160,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 <SectionList grid="row">
   <SectionItem
-    title="Order Summary"
+    title="OrderSummary"
     description="This component provide a summary of the items in the cart, including the total price, related shipping tax, and discounts."
     actionPath="/docs/guides/faststore/molecules-order-summary"
     fullWidth
