--- a/docs/faststore/components/organisms/empty-state.mdx
+++ b/docs/faststore/components/organisms/empty-state.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Empty State"
-excerpt: This component can be used to represent an empty state.
+title: "EmptyState"
+excerpt: Represents the component's empty state while the main content is loading.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/PaymentMethods___b0f344b254360daa53406cd631887adf.png
 components:
   - EmptyState.tsx
 ---
 
-This component can be used to represent an empty state.
+The `EmptyState` can be used to represent an empty state.
 
 ## Overview
 
