Fix, Filter, Hero and ImageGallery

--- a/docs/faststore/components/organisms/hero.mdx
+++ b/docs/faststore/components/organisms/hero.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Hero"
-excerpt: Hero displays a full-width banner at the top of a webpage.
+excerpt: Displays a full-width banner at the top of a webpage.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Hero___c73fdfe80ce87c2ccc4701c07e9d5398.png
 components:
@@ -88,11 +88,11 @@ Besides those attributes, the following props are also supported:
 
 <ComponentPropsSection component="Hero" />
 
-### Hero Image
+### HeroImage
 
 <ComponentPropsSection component="HeroImage" />
 
-### Hero Header
+### HeroHeader
 
 <ComponentPropsSection component="HeroHeader" />
 
