--- a/docs/faststore/components/organisms/image-gallery.mdx
+++ b/docs/faststore/components/organisms/image-gallery.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Image Gallery"
+title: "ImageGallery"
 excerpt: Used when you want to display a series of photos in a gallery on a post or page.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Hero___c73fdfe80ce87c2ccc4701c07e9d5398.png
@@ -7,7 +7,7 @@ components:
   - ImageGallery.tsx
   - ImageGallerySelector.tsx
 ---
-An `ImageGallery` is used when you want to display a series of photos in a gallery on a post or page.According to the quantity of `Image` to be displayed, the `ImageGallerySelector` will be displayed.
+The `ImageGallery` is used when you want to display a series of photos in a gallery on a post or page.According to the quantity of `Image` to be displayed, the `ImageGallerySelector` will be displayed.
 
 ---
 
@@ -77,11 +77,11 @@ const currentImage = imagesUsage[selectedImageIdx]
 
 ## Props
 
-### Image Gallery
+### ImageGallery
 
 <ComponentPropsSection component="ImageGallery" />
 
-### Image Gallery Selector
+### ImageGallerySelector
 
 <ComponentPropsSection component="ImageGallerySelector" />
 
