--- a/docs/faststore/components/organisms/filter.mdx
+++ b/docs/faststore/components/organisms/filter.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Filter"
-excerpt: The Filter component is used to filter products inside the Product Listing Page (PLP) and Search Page.
+excerpt: Filters products inside the Product Listing Page (PLP) and Search Page.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/PaymentMethods___b0f344b254360daa53406cd631887adf.png
 components:
@@ -10,7 +10,7 @@ components:
   - FilterFacetRange.tsx
 ---
 
-The Filter component is used to filter products inside the <a href="https://starter.vtex.app/office" target="_blank">Product Listing Page (PLP)</a> and Search Page. The `Filter` component is a compound of the following:
+The `Filter` component is used to filter products inside the <a href="https://starter.vtex.app/office" target="_blank">Product Listing Page (PLP)</a> and Search Page. The `Filter` component is a compound of the following:
 
 - `Filter`: wraps an `Accordion` along with the component title.
 - `FilterSlider`: `SlideOver` that wraps the `Filter` for small screen dimensions.
@@ -270,15 +270,15 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 <ComponentPropsSection component="Filter" />
 
-### Filter Facets
+### FilterFacets
 
 <ComponentPropsSection component="FilterFacets" />
 
-### Filter Facet Boolean Item
+### FilterFacetBooleanItem
 
 <ComponentPropsSection component="FilterFacetBooleanItem" />
 
-### Filter Facet Range
+### FilterFacetRange
 
 <ComponentPropsSection component="FilterFacetRange" />
 
