--- a/docs/faststore/components/organisms/navbar.mdx
+++ b/docs/faststore/components/organisms/navbar.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Navbar"
-excerpt: This component represents the page header and groups features like Search and Regionalization.
+excerpt: Represents the page header and groups features like Search and Regionalization.
 components:
   - Navbar.tsx
   - NavbarHeader.tsx
@@ -8,7 +8,7 @@ components:
   - NavbarButtons.tsx
 ---
 
-Represents the page header and groups some features like: `Search`, `Regionalization`, `SignIn`, `CartSidebar`. This component is part of the [Navigation](https://developers.vtex.com/docs/guides/faststore/feature-navigation) feature.
+The `Navbar` represents the page header and groups some features like: `Search`, `Regionalization`, `SignIn`, `CartSidebar`. This component is part of the [Navigation](https://developers.vtex.com/docs/guides/faststore/feature-navigation) feature.
 
 ## Import
 
@@ -99,15 +99,15 @@ The [NavbarLinks](https://developers.vtex.com/docs/guides/faststore/molecules-na
 
 <ComponentPropsSection component="Navbar" />
 
-### Navbar Header
+### NavbarHeader
 
 <ComponentPropsSection component="NavbarHeader" />
 
-### Navbar Row
+### NavbarRow
 
 <ComponentPropsSection component="NavbarRow" />
 
-### Navbar Buttons
+### NavbarButtons
 
 <ComponentPropsSection component="NavbarButtons" />
 
