--- a/docs/faststore/components/organisms/newsletter.mdx
+++ b/docs/faststore/components/organisms/newsletter.mdx
@@ -12,7 +12,7 @@ components:
   - NewsletterForm.tsx
   - NewsletterHeader.tsx
 title: Newsletter
-excerpt: The Newsletter component is a section with at least one input text with an action allowing users to submit their input.
+excerpt: The `Newsletter` component is a section with at least one input text with an action allowing users to submit their input.
 ---
 
 ## Import
