--- a/docs/faststore/components/organisms/out-of-stock.mdx
+++ b/docs/faststore/components/organisms/out-of-stock.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Out of Stock"
-excerpt: This component is used to announce to users that the product is out of stock.
+title: "OutofStock"
+excerpt: Displays to users that the product is out of stock.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/OutOfStock___5863b0eb4a4a8ce9a98da5c760461e61.png
 components:
   - OutOfStock.tsx
 ---
 
-This component is used to announce to users that the product is out of stock. It also asks for their contact to let they know when the product arrives.
+This `OutofStock` component is used to announce to users that the product is out of stock. It also asks for their contact to let they know when the product arrives.
 
 ## Import
 
