--- a/docs/faststore/components/organisms/payment-methods.mdx
+++ b/docs/faststore/components/organisms/payment-methods.mdx
@@ -1,13 +1,13 @@
 ---
 title: "PaymentMethods"
-excerpt: Payment Methods display the logos of the available payment options in a store.
+excerpt: Displays the logos of the available payment options in a store.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/PaymentMethods___b0f344b254360daa53406cd631887adf.png
 components:
   - PaymentMethods.tsx
 ---
 
-The PaymentMethods component displays the logos of the available payment options in a store.
+The `PaymentMethods` component displays the logos of the available payment options in a store.
 
 ## Import
 
