--- a/docs/faststore/components/organisms/price-range.mdx
+++ b/docs/faststore/components/organisms/price-range.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Price Range"
-excerpt: Price Ranges are sliders that allows users to select a maximum and minimum price.
+title: "PriceRange"
+excerpt: Sliders that allows users to select a maximum and minimum price.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/PriceRange___5863b0eb4a4a8ce9a98da5c760461e61.png
 components:
   - PriceRange.tsx
 ---
 
-The Price Range component is a [Slider](https://developers.vtex.com/docs/guides/faststore/atoms-slider) that allows users to select a maximum and minimum price from a range.
+The `PriceRange` component is a [Slider](https://developers.vtex.com/docs/guides/faststore/atoms-slider) that allows users to select a maximum and minimum price from a range.
 
 ## Overview
 
