--- a/docs/faststore/components/organisms/product-grid.mdx
+++ b/docs/faststore/components/organisms/product-grid.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Product Grid"
-excerpt: It's a section generally used on PLP pages to list the products available in the store.
+title: "ProductGrid"
+excerpt: Lists the products available in the store.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Hero___c73fdfe80ce87c2ccc4701c07e9d5398.png
 components:
@@ -8,7 +8,7 @@ components:
   - ProductGridItem.tsx
 ---
 
-It's a section generally used on PLP pages to list the products available in the store.The `ProductGrid` is a compound of the following:
+The `ProductGrid` is a section generally used on PLP pages to list the products available in the store.The `ProductGrid` is a compound of the following:
 
 - `ProductGrid`: wraps the product grid items.
 - `ProductGridItem`: wraps the product inside a list item.
@@ -91,11 +91,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-### Product Grid
+### ProductGrid
 
 <ComponentPropsSection component="ProductGrid" />
 
-### Product Grid Item
+### ProductGridItem
 
 <ComponentPropsSection component="ProductGridItem" />
 
@@ -148,7 +148,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 <SectionList grid="row">
   <SectionItem
-    title="Product Shelf"
+    title="ProductShelf"
     description=" Displays a list of products to be used as a section on the store."
     actionPath="/docs/guides/faststore/organisms-product-shelf"
     fullWidth
