--- a/docs/faststore/components/organisms/product-shelf.mdx
+++ b/docs/faststore/components/organisms/product-shelf.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Product Shelf"
+title: "ProductShelf"
 excerpt: Displays a list of products to be used as a section on the store.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/ProductCardComponent___e6502d57cf7e5bf247f86b64577d4141.png
@@ -9,7 +9,7 @@ components:
   - ProductShelfItem.tsx
 ---
 
-Displays a list of products to be used as a section on the store.The `ProductShelf` is a compound of the following:
+The `ProductShelf` component Displays a list of products to be used as a section on the store.The `ProductShelf` is a compound of the following:
 
 - `ProductShelfItems`: the product list.
 - `ProductShelfItem`: wraps the product inside a list item.
